--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
+  <style>
+    .hero {
+      position: relative;
+      min-height: 100vh;
+      background: url('Rect6295.png') no-repeat center center/cover;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: white;
+      padding: 20px;
+      margin-bottom: 50px;
+    }
+
+    .about__top {
+      text-align: center;
+      color: #fff;
+      background-image: url('Rect6295.png');
+      background-repeat: no-repeat;
+      background-position: center center;
+      text-transform: uppercase;
+      min-height: 740px;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -116,7 +142,7 @@
         <div class="agro__body-1">
           <!-- КАРТИНКА -->
           <figure class="agro__image">
-            <img src="images/Rectangle 6299.png" alt="Колосья пшеницы" class="responsive" />
+            <img src="Rectangle 6299.png" alt="Колосья пшеницы" class="responsive" />
           </figure>
 
           <!-- ТЕКСТ + ТАБЛИЦА -->
@@ -225,7 +251,7 @@
     </div>
   </section>
 
-<!-- slogon -->
+  <!-- slogon -->
   <div class="slogon">
     <div class="container__slogon">
       <p class="slogon__text">IMPRESSIVE SCALE. CONVINCING QUALITY.</p>
@@ -265,7 +291,7 @@
   </section>
 
 
-<!-- blog-section -->
+  <!-- blog-section -->
   <section class="blog-section" id="BLOG">
     <h2>RECENT BLOG POSTS</h2>
 
@@ -278,7 +304,8 @@
           <div class="blog-title">
             <a href="#">Agroton expands sown areas</a> <span>↗</span>
           </div>
-          <p class="blog-desc">This year we increased sown areas by 10%, which will allow us to increase the production of grain and oilseed crops.</p>
+          <p class="blog-desc">This year we increased sown areas by 10%, which will allow us to increase the production
+            of grain and oilseed crops.</p>
         </div>
       </div>
 
@@ -291,7 +318,8 @@
             <div class="small-title">
               <a href="#">Export to a new country!</a> <span>↗</span>
             </div>
-            <p class="small-desc">We entered the market of [country name] and expanded the geography of supplies of quality Ukrainian products.</p>
+            <p class="small-desc">We entered the market of [country name] and expanded the geography of supplies of
+              quality Ukrainian products.</p>
           </div>
         </div>
 
@@ -302,7 +330,8 @@
             <div class="small-title">
               <a href="#">Modern technologies in livestock farming</a> <span>↗</span>
             </div>
-            <p class="small-desc">Agroton has implemented innovative systems for feeding and caring for livestock, which improves product quality.</p>
+            <p class="small-desc">Agroton has implemented innovative systems for feeding and caring for livestock, which
+              improves product quality.</p>
           </div>
         </div>
       </div>
@@ -315,7 +344,7 @@
   <footer class="footer" id="CONTACT">
     <div class="footer__grid">
       <div>
-        <div class="footer__title"> <img src="Images/AgroLogo.png" alt="">  AGROTON</div>
+        <div class="footer__title"> <img src="Images/AgroLogo.png" alt=""> AGROTON</div>
         <p>© 2025 Agroton. All rights reserved.</p>
       </div>
       <div>
@@ -335,7 +364,8 @@
       </div>
       <div>
         <div class="footer__title">Contacts</div>
-        <p>Ukraine, Kyiv<br>ul. Грушевского Михаила, 9Б<br>Email: office@agroton.com.ua<br>Tel.: +380445945159, +380504788152</p>
+        <p>Ukraine, Kyiv<br>ul. Грушевского Михаила, 9Б<br>Email: office@agroton.com.ua<br>Tel.: +380445945159,
+          +380504788152</p>
       </div>
     </div>
     <div class="footer__bottom">
